<resources>
    <string name="app_name">GongGurumi</string>
    <string name="map_api_key">AIzaSyCU5AO-vy7T0lPoHaHhpWEfxfcHBFMdon4</string>

    <!-- Login & Find & Join -->
    <string name="et_find_id">아이디 찾기</string>
    <string name="et_find_pwd">비밀번호 찾기</string>
    <string name="et_ask_join"><u>아직 회원이 아니신가요?</u></string>
    <string name="tv_error_msg_name">이름을 입력해주세요.</string>
    <string name="tv_error_msg_birth">8자리 숫자를 입력해주세요.(ex.20000101)</string>
    <string name="tv_error_msg_sms">\'-\'없이 휴대폰번호 11자리를 입력해주세요.</string>
    <string name="tv_error_msg_nickname">닉네임을 입력해주세요.</string>
    <string name="tv_error_msg_id">아이디를 입력해주세요.</string>
    <string name="tv_error_msg_pwd">8~22자리의 영문/숫자로 입력해주세요.</string>
    <string name="tv_error_msg_pwd_check_1">비밀번호를 먼저 입력해주세요.</string>
    <string name="tv_error_msg_pwd_check_2">비밀번호를 한번 더 입력해주세요.</string>

    <!-- Address -->
    <string name="tv_address_selected">%s ▾</string>
    <string name="tv_address_unselected">주소를 등록해주세요 ▾</string>
    <string name="tv_address_empty">최근 사용한 주소가</string>
    <string name="tv_address_search_query">지번, 도로명, 건물명으로 검색</string>
    <string name="url_address_search">https://test-1c6be.web.app</string>
    <string name="url_address_search_execute">javascript:sample2_execDaumPostcode();</string>
    <string name="permission_error_service_off">위치 서비스가 꺼져 있어, 현재 위치를 확인할 수 없습니다.</string>
    <string name="permission_error_service_denied">위치 권한이 거부되었습니다.</string>

    <!-- Category -->
    <string name="category_all">전체</string>
    <string name="category_food">식품</string>
    <string name="category_stationery">문구</string>
    <string name="category_daily_neccessity">생활용품</string>
    <string name="category_etc">기타</string>

    <!-- BoardCategoryWriting  -->
    <string name="label_title">제목</string>
    <string name="label_category">카테고리</string>
    <string name="label_deadline">마감일</string>
    <string name="label_price">가격</string>
    <string name="label_max_people">최대 인원</string>
    <string name="people">명</string>
    <string name="label_meet_point">만날장소</string>
    <string name="label_buy_point">구매장소</string>
    <string name="write_option">선택사항</string>
    <string name="ok_button">확인</string>
    <string name="label_contet">내용</string>

    <string-array name="categories">
        <item>@string/category_food</item>
        <item>@string/category_stationery</item>
        <item>@string/category_daily_neccessity</item>
        <item>@string/category_etc</item>
    </string-array>

    <!--  BoardFragment  -->
    <string name="btn_participate">참여하기</string>
    <string name="btn_cancel">취소하기</string>
    <string name="label_meet_place">만날장소</string>
    <string name="label_buy_place">구매장소</string>

    <!-- My-page-Fragment -->
    <string name="tv_profile_change"><u>수정하기</u></string>
    <string name="tv_myPage_toBoard_title">"&lt; 게시글 : %s &gt;"</string>
    <string name="at_sign">\u0040</string>
    <string name="Comment">댓글</string>
    <string name="Insert">입력</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>