<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:padding="16dp">
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src ="@drawable/logo_main_blue" />
    <LinearLayout
        android:id="@+id/layout_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            app:counterMaxLength="10">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="16sp"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="아이디"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            app:counterMaxLength="10"
            app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:hint="비밀번호"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_btn_find_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/layout_et_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_find_id"
            android:text="@string/et_find_id"
            android:textColor="@color/black_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:background="@color/black_20"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_find_pwd"
            android:text="@string/et_find_pwd"
            android:textColor="@color/black_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="5dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_btn_find_info"
        android:text="로그인"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/notosanskr_bold_hestia"
        android:background="@color/mainColor" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_join"
        android:text="@string/et_ask_join"
        android:textColor="@color/black_50"
        android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>

