<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="?attr/actionBarSize">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_board_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/collapse_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_navigation_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/ib_back_button"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_arrow_back"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.appcompat.widget.Toolbar>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_board_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        app:cardCornerRadius="160dp"
                        app:cardElevation="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_writer_profile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_profile_default" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_writer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        tools:text="공구 님"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/cv_board_img"
                        app:layout_constraintStart_toEndOf="@+id/cv_board_img"
                        app:layout_constraintTop_toTopOf="@+id/cv_board_img" />

                    <TextView
                        android:id="@+id/tv_dday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        tools:text="D - 7"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tv_left_person"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_left_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        tools:text="2명 남았어요!!"
                        android:textColor="@color/red"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_dday" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/tv_writen_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:singleLine="true"
                        tools:text="제목입니다. 공구해요"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp">

                        <TextView
                            android:id="@+id/tv_writen_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="카테고리"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_writen_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2022.01.12"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_writen_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="내용입니다. 토마토 3개 공구하실 분 구해요 개당 천원에 공구합니다. 만날장소 및 구매 장소는 아래를 확인해주세요"
                        android:textSize="16sp" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        />

                    <TextView
                        android:id="@+id/tv_participator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        tools:text="참여자 : 아름, 지윤"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_meet_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/label_meet_place"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_meet_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        tools:text="대구시 달서구 군평로 560" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fcv_meet_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/black_50" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_buy_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/label_buy_place"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_buy_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        tools:text="대구시 달서구 군평로 560" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fcv_buy_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/black_50" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="12"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/transparent"
            android:layout_weight="5"
            android:paddingTop="14dp"
            android:padding="12dp"
            android:src="@drawable/ic_chat"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="3"
            android:textSize="26sp"
            tools:text="3000원"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_participate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:layout_margin="6dp"
            android:textSize="16sp"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/btn_participate"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>